2008-02-09  Eli Zaretskii  <eliz@gnu.org>

	* msdog.texi (Windows Fonts): Use a @table for describing font
	properties.

2008-02-07  Jason Rumney  <jasonr@gnu.org>

	* msdog.texi (Windows Files): w32-get-true-file-attributes default
	value has changed.
	(Windows HOME): Clarify what is meant by "if that fails as well".
	(Windows Fonts): New section.

2008-02-07  D. E. Evans  <sinuhe@gnu.org>  (tiny change)

	* basic.texi (Basic Undo): Remove duplicate "you can".

2008-02-02  Eli Zaretskii  <eliz@gnu.org>

	* maintaining.texi (Tags): Fix last change.

2008-02-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi: Use new FSF's Back-Cover Text.

2008-01-31  Nick Roberts  <nickrob@snap.net.nz>

	* trouble.texi (Checklist): Direct users to emacs-devel@gnu.org.

2008-01-26  Richard Stallman  <rms@gnu.org>

	* maintaining.texi (Tags): Delete redundant index entry.

2008-01-26  Eli Zaretskii  <eliz@gnu.org>

	* programs.texi (Imenu): Move "@cindex tags" from here...
	* maintaining.texi (Tags): ...to here.

2008-01-23  Kevin Ryde  <user42@zip.com.au>

	* custom.texi (Mouse Buttons): Update elisp xref to "Click Events" on
	click count.

2008-01-21  Juanma Barranquero  <lekktu@gmail.com>

	* entering.texi (Exiting): Fix typo.
	Reported by D. E. Evans <sinuhe@gnu.org>.

2007-12-31  Martin Rudalics  <rudalics@gmx.at>

	* glossary.texi (Glossary): Fix typo.

2007-12-27  Richard Stallman  <rms@gnu.org>

	* text.texi (Formatted Text): Improve menu tag.
	(Editing Format Info): In Info, add duplicate menu of nodes
	about the submenus.
	(Format Faces): Say where Faces menu is found.  Mention Other.
	(Format Colors): Say where these submenus are found.
	(Format Indentation, Format Justification): Likewise.
	(Format Properties): Likewise.

2007-12-22  Richard Stallman  <rms@gnu.org>

	* search.texi (Query Replace): Make exp of query-replace more
	self-contained, and clarify.

	* cc-mode.texi (Getting Started): Change @ref to @pxref.

2007-12-15  Richard Stallman  <rms@gnu.org>
